@startuml
'https://plantuml.com/class-diagram

class RestaurantController {
- restaurantService: RestaurantService

+ getRestaurants(): List<Restaurant>
}

class RestaurantService {
- restaurantPort: RestaurantPort

+ getRestaurants(): List<Restaurant>
}

abstract class APICaller {
+ executeAPICall(): String
# login(): void
# checkToken(): void
# callAPI(): String
}

interface RestaurantPort {
+ getRestaurants(): List<Restaurant>
}

class UberEatsScraperAdapter {
+ getRestaurants(): List<Restaurant>
# login(): void
# checkToken(): void
# callAPI(): String
}

class Restaurant {
- name: String
- location: Location
+ getName(): String
+ getLocation(): Location
}

RestaurantController --> RestaurantService
RestaurantService --> RestaurantPort
UberEatsScraperAdapter ..|> RestaurantPort
UberEatsScraperAdapter --|> APICaller
RestaurantController --> Restaurant : "restaurants"


@enduml